# sturdy-telegram

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
archive/: airflow_tutorial.ipynb
config/: airflow.cfg
dags/: qdrant_document_ingestion.py
data/: last_read.csv
notebooks/pipeline/: ingestion.ipynb
notebooks/template/: rag.ipynb
