[project]
name = "sturdy-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.2",
    "llama-index>=0.12.42",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "qdrant-client>=1.14.2",
    "pendulum>=3.1.0",
    "python-dotenv>=1.1.0",
    "openai>=1.86.0",
    "chainlit>=2.5.5",
    "asyncpg>=0.30.0",
    "boto3>=1.38.36",
]
